src/test/deca/context/valid/created/assignation-float-int.deca
//Description :
// Assignation d'un int dans un float
//
// Resultats :
//


{
    float x;
    x = 2;
}
