src/test/deca/context/invalid/created/assign-incomp.deca
//Description :
// Assignations incompatible
//
// Resultats :
// Erreur

{
    int x;

    x = true;
}
